--- a/BE/requirements.txt
+++ b/BE/requirements.txt
@@ -1,5 +1,4 @@
 mapbox
-os
 pandas
 json5
 tabulate
@@ -8,10 +7,12 @@ requests
 langchain
 langchain-community
 langchain_core
-time
 fastapi
 python-dotenv
 osmnx
 numpy
 geopy
 geopandas
+tabulate
+langchain_community
+langchain_openai
